--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
+    "@angular/compiler-cli": "^8.0.0",
     "@angular/core": "5.2.11",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
@@ -23,6 +23,7 @@
     "@ionic-native/core": "~4.20.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
+    "@ionic-native/streaming-media": "^5.8.0",
     "@ionic/storage": "2.2.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
